# image_lib

./: .gitignore  BasicJpegAdapter.cpp  BasicJpegAdapter.hpp  CMakeLists.txt  Color.hpp  Image.hpp  ImageChannel.hpp  ImageLib.sln  Main.cpp  README.md  TraitsClasses.hpp  main.cpp
Algorithms/: AutoContrast.hpp  Bars.hpp  Block.hpp  Contrast.hpp  Convert.hpp  Convolve.hpp  Invert.hpp  ModifiedAutoContrast.hpp  Shrink.hpp
ImageLib/: ImageLib.vcxproj  ImageLib.vcxproj.filters
ImageLib/Adaptors/: JPEGAdaptor.cpp
ImageLib/Algorithms/: Convolution.hpp  HomogeneousPointOperations.hpp  ImageGeneration.hpp  Shrink.hpp
SimpleImage/: SimpleImage.sln
SimpleImage/SimpleImageLib/: SimpleImageLib.vcxproj  SimpleImageLib.vcxproj.filters
SimpleImage/TestProject/: ColorSpaceConversionTests.cpp  ConvolutionTests.cpp  HomogeneousPointOperationsTests.cpp  ImageGenerationTests.cpp  ShrinkTests.cpp  TestMain.cpp  TestProject.vcxproj  TestProject.vcxproj.filters  color_space_conversion_tests.cpp  convolution_tests.cpp  homogeneous_point_operations_tests.cpp  image_generation_tests.cpp  main.cpp  shrink_tests.cpp  test_config.hpp
TestProject/: ColorSpaceConversionTests.cpp  ConvolutionTests.cpp  ConvolutionTests.hpp  HomogeneousPointOperationsTests.cpp  ImageGenerationTests.cpp  ShrinkTests.cpp  TestConfig.hpp  TestProject.vcxproj  TestProject.vcxproj.filters  color_space_conversion_tests.cpp  color_space_conversion_tests.hpp  convolution_tests.cpp  convolution_tests.hpp  homogeneous_point_operations_tests.cpp  homogeneous_point_operations_tests.hpp  image_generation_tests.cpp  image_generation_tests.hpp  shrink_tests.cpp  shrink_tests.hpp  test_config.hpp  test_main.cpp
UnitTests/: ChannelTests.cpp  UnitTests.vcxproj  algorithm_tests.cpp  algorithm_tests_io.cpp  channel_tests.cpp  cimage_tests.cpp  image_tests.cpp  pimage_tests.cpp  test_helpers.h
adapters/: jpeg_adapter.cpp  jpeg_adapter.hpp
algorithms/: auto_contrast.hpp  bars.hpp  block.hpp  color_space_conversion.hpp  contrast.hpp  convert.hpp  convolution.hpp  convolve.hpp  homogeneous_point_operations.hpp  homogenous_point_operations.hpp  image_generation.hpp  invert.hpp  modified_auto_contrast.hpp  shrink.hpp
color/: color.hpp  color_traits.hpp
data/log/: log1.txt
image/: channel.hpp  image.hpp
test/: bar_tests.cpp  bar_tests.hpp  block_tests.cpp  block_tests.hpp  color_space_conversion_tests.cpp  color_space_conversion_tests.hpp  contrast_test.cpp  contrast_test.hpp  convolution_tests.cpp  homogeneous_point_operations_tests.cpp  homogeneous_point_operations_tests.hpp  image_generation_tests.cpp  image_generation_tests.hpp  invert_test.cpp  invert_test.hpp  shrink_test.cpp  shrink_tests.cpp  shrink_tests.hpp
(+38 files in other folders)
